apps/podinfo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  labels:
    app.kubernetes.io/name: podinfo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: podinfo
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: http-metrics
      port: 9797
      targetPort: http-metrics
      protocol: TCP
